# mcp-shopline

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-TW.md  app.py  mcp_server.py  pyproject.toml
.github/workflows/: publish.yml
config/: settings.py
docs/superpowers/plans/: 2026-04-09-phase0-phase1-implementation.md
docs/superpowers/specs/: 2026-04-09-shopline-full-api-coverage-design.md
scripts/audit/: check_coverage.py
scripts/auth/: inspect_data_structure.py  test_connection.py
tests/: test_addon_product_tools.py  test_affiliate_tools.py  test_agent_tools.py  test_all_tools.py  test_category_tools.py  test_channel_tools.py  test_conversation_tools.py  test_custom_field_tools.py  test_customer_group_tools.py  test_customer_tools.py  test_delivery_option_tools.py  test_flash_price_tools.py  test_gift_tools.py  test_member_point_tools.py  test_membership_tier_tools.py  test_merchant_tools.py  test_order_delivery_tools.py  test_payment_tools.py  test_promotion_tools.py  test_return_order_tools.py  test_review_tools.py  test_settings_tools.py  test_staff_tools.py  test_store_credit_tools.py  test_subscription_tools.py  test_tax_tools.py  test_token_tools.py
tests/test_writes/: run_write_tests.py  test_customer_writes.py
tools/: addon_product_tools.py  affiliate_tools.py  agent_tools.py  analytics_tools.py  base_tool.py  category_tools.py  channel_tools.py  conversation_tools.py  custom_field_tools.py  customer_group_tools.py  customer_tools.py  delivery_option_tools.py  flash_price_tools.py  gift_tools.py  member_point_tools.py  membership_tier_tools.py  merchant_tools.py  order_delivery_tools.py  order_tools.py  payment_tools.py  product_tools.py  promotion_tools.py  return_order_tools.py  review_tools.py  settings_tools.py  staff_tools.py  store_credit_tools.py  subscription_tools.py  tax_tools.py  token_tools.py  tool_registry.py
tools/writes/: category_writes.py  conversation_writes.py  customer_writes.py  delivery_option_writes.py  gift_writes.py  media_writes.py  merchant_writes.py  order_delivery_writes.py  order_writes.py  product_writes.py  promotion_writes.py  purchase_order_writes.py  return_order_writes.py  review_writes.py
