[project]
name = "mcp-shopline"
version = "0.1.0"
description = "MCP server wrapping the Shopline Open API into 19 AI Agent-callable tools for e-commerce data analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Asgard AI Platform" },
]
keywords = ["mcp", "shopline", "e-commerce", "ai-agent", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests",
    "mcp",
]

[project.urls]
Homepage = "https://github.com/asgard-ai-platform/mcp-shopline"
Repository = "https://github.com/asgard-ai-platform/mcp-shopline"
Issues = "https://github.com/asgard-ai-platform/mcp-shopline/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-shopline = "mcp_server:main"

[tool.uv.sources]
mcp = { path = "../python-sdk", editable = true }

[tool.setuptools]
py-modules = ["mcp_server", "app"]

[tool.setuptools.packages.find]
include = ["config*", "tools*"]
