[project]
name = "mcp-shopline"
version = "0.3.0"
description = "MCP server wrapping the Shopline Open API into 143 AI Agent-callable tools for e-commerce data analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Asgard AI Platform" },
]
keywords = ["mcp", "shopline", "e-commerce", "ai-agent", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = [
    "requests",
    "mcp",
]

[project.urls]
Homepage = "https://github.com/asgard-ai-platform/mcp-shopline"
Repository = "https://github.com/asgard-ai-platform/mcp-shopline"
Issues = "https://github.com/asgard-ai-platform/mcp-shopline/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-shopline = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server", "app"]

[tool.setuptools.packages.find]
include = ["config*", "tools*"]
